--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,3 @@
 <footer>
-  <p class="copyright">
-    &copy; <%= new Date().getFullYear() %>, CSE Motors | All Rights Reserved |
-    BYU-Idaho
-  </p>
+  <p>© 2025 CSE Motors</p>
 </footer>
