--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('../partials/head') %>
+  <head>
+    <%- include('../partials/head') %>
+  </head>
   <body>
-    <%- include('../partials/header') %> <%- include('../partials/navigation')
-    %>
-    <main><%- body %></main>
-    <%- include('../partials/footer') %>
+    <div class="wrapper">
+      <%- include('../partials/header') %> <%- include('../partials/navigation')
+      %>
+      <main><%- body %></main>
+      <%- include('../partials/footer') %>
+    </div>
   </body>
 </html>
