--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,1 +1,13 @@
-<nav><%- nav %></nav>
+<% const navList = nav %>
+<nav>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <% navList.forEach(nav => { %>
+    <li>
+      <a href="/inv/type/<%= nav.classification_id %>"
+        ><%= nav.classification_name %></a
+      >
+    </li>
+    <% }) %>
+  </ul>
+</nav>
