Completed Assignment 3 with fixed include paths and dependencies

--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,5 +1,5 @@
-<%- include('../../partials/head') %> <%- include('../../partials/header') %>
-<%- include('../../partials/navigation') %>
+<%- include('../partials/head') %> <%- include('../partials/header') %> <%-
+include('../partials/navigation') %>
 
 <main>
   <h1><%= title %></h1>
@@ -10,4 +10,4 @@
   </p>
 </main>
 
-<%- include('../../partials/footer') %>
+<%- include('../partials/footer') %>
