--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,63 +1,36 @@
-<section class="hero">
+<%- include('partials/head') %> <%- include('partials/header') %> <%-
+include('partials/navigation') %>
+
+<main id="hero">
+  <img
+    src="/images/site/home.jpg"
+    alt="CSE Motors Hero Image"
+    class="hero-img"
+  />
   <h1>Welcome to CSE Motors!</h1>
-  <div class="hero-content">
-    <div class="hero-text">
-      <h2>DMC Delorean</h2>
-      <ul>
-        <li>3 Cup holders</li>
-        <li>Superman doors</li>
-        <li>Fuzzy dice!</li>
-      </ul>
-      <button class="own-btn">Own Today</button>
-    </div>
-    <img
-      src="/images/vehicles/delorean.jpg"
-      alt="DMC Delorean"
-      class="hero-img"
-    />
-  </div>
-</section>
-<div class="main-content">
-  <section class="upgrades">
-    <h2>Delorean Upgrades</h2>
+  <div id="upgrades">
+    <h2>Upgrades</h2>
     <div class="upgrade-grid">
-      <div class="upgrade-item">
-        <div class="img-container">
-          <img src="/images/upgrades/flux-cap.jpg" alt="Flux Capacitor" />
-        </div>
-        <a href="#">Flux Capacitor</a>
+      <div>
+        <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" />
       </div>
-      <div class="upgrade-item">
-        <div class="img-container">
-          <img src="/images/upgrades/flame.jpg" alt="Flame Decals" />
-        </div>
-        <a href="#">Flame Decals</a>
+      <div>
+        <img src="/images/upgrades/flame-decals.png" alt="Flame Decals" />
       </div>
-      <div class="upgrade-item">
-        <div class="img-container">
-          <img
-            src="/images/upgrades/bumper_sticker.jpg"
-            alt="Bumper Stickers"
-          />
-        </div>
-        <a href="#">Bumper Stickers</a>
+      <div>
+        <img src="/images/upgrades/bumper-stickers.png" alt="Bumper Stickers" />
       </div>
-      <div class="upgrade-item">
-        <div class="img-container">
-          <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" />
-        </div>
-        <a href="#">Hub Caps</a>
-      </div>
+      <div><img src="/images/upgrades/hub-caps.png" alt="Hub Caps" /></div>
     </div>
-  </section>
-  <section class="reviews">
-    <h2>DMC Delorean Reviews</h2>
+  </div>
+  <div id="reviews">
+    <h2>Customer Reviews</h2>
     <ul>
-      <li>"So fast it's almost like traveling in time." (4/5)</li>
-      <li>"Coolest ride on the road." (4/5)</li>
-      <li>"I'm feeling Marty McFly!" (5/5)</li>
-      <li>"The most futuristic ride of our generation." (4.5/5)</li>
-      <li>"80's livin and I love it!" (3/5)</li>
+      <li>"Great selection of cars!" - John D.</li>
+      <li>"Loved the DeLorean!" - Sarah M.</li>
+      <li>"Best deals in town!" - Mike R.</li>
     </ul>
-  </section>
-</div>
+  </div>
+</main>
+
+<%- include('partials/footer') %>
