--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,5 +1,5 @@
-<%- include('../../partials/head') %> <%- include('../../partials/header') %>
-<%- include('../../partials/navigation') %>
+<%- include('../partials/head') %> <%- include('../partials/header') %> <%-
+include('../partials/navigation') %>
 
 <main>
   <% if (title) { %>
@@ -7,4 +7,4 @@
   <% } else { %> <% res.redirect('/') %> <% } %> <%# messages() %> <%- grid %>
 </main>
 
-<%- include('../../partials/footer') %>
+<%- include('../partials/footer') %>
