--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,8 @@
-<header>
-  <h1>CSE Motors</h1>
+<header id="top-header">
+  <div class="siteName">
+    <a href="/" title="Return to Home page">CSE Motors</a>
+  </div>
+  <div id="tools">
+    <a href="/account/login" title="Go to your account">My Account</a>
+  </div>
 </header>
