--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <%- include('../partials/head') %>
-  </head>
-  <body>
-    <div class="wrapper">
-      <%- include('../partials/header') %> <%- include('../partials/navigation')
-      %>
-      <main><%- body %></main>
-      <%- include('../partials/footer') %>
-    </div>
-  </body>
+<%- include('../partials/head') %>
+<body>
+  <div class="wrapper">
+    <%- include('../partials/header') %>
+    <%- include('../partials/navigation') %>
+    <main><%- body %></main>
+    <%- include('../partials/footer') %>
+  </div>
+</body>
 </html>
