--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
 <footer>
-  <p>© 2025 CSE Motors</p>
+  <p>© 2025 CSE Motors. All rights reserved.</p>
+  <p><a href="/inv/error" title="Trigger Server Error">Test Error</a></p>
 </footer>
