Updated index.ejs image paths to match GitHub files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@ include('partials/navigation') %>
 
 <main id="hero">
   <img
-    src="/images/site/home.jpg"
+    src="/images/site/checkerboard.jpg"
     alt="CSE Motors Hero Image"
     class="hero-img"
   />
@@ -12,15 +12,17 @@ include('partials/navigation') %>
     <h2>Upgrades</h2>
     <div class="upgrade-grid">
       <div>
-        <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" />
+        <img src="/images/upgrades/flux-cap.jpg" alt="Flux Capacitor" />
       </div>
       <div>
-        <img src="/images/upgrades/flame-decals.png" alt="Flame Decals" />
+        <img src="/images/upgrades/flame.jpg" alt="Flame Decals" />
       </div>
       <div>
-        <img src="/images/upgrades/bumper-stickers.png" alt="Bumper Stickers" />
+        <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers" />
       </div>
-      <div><img src="/images/upgrades/hub-caps.png" alt="Hub Caps" /></div>
+      <div>
+        <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+      </div>
     </div>
   </div>
   <div id="reviews">
