finished up the big rocks for the entire project, now time to go back and edit eveyrthing.

--- a/views/inventory/delete-inventory.ejs
+++ b/views/inventory/delete-inventory.ejs
@@ -1,19 +1,21 @@
-<%- include('../partials/header') %>
+<%- include('../partials/head') %> <%- include('../partials/header') %> <%-
+include('../partials/navigation') %>
+
 <main>
-  <h1><%= title %></h1>
-  <% if (locals.messages) { %> <%- include('../partials/messages') %> <% } %>
-  <p>Confirm Deletion - This action is permanent.</p>
-  <form id="deleteForm" action="/inv/delete/" method="post">
-    <label>Make:</label>
-    <p><%= inv_make %></p>
-    <label>Model:</label>
-    <p><%= inv_model %></p>
-    <label>Year:</label>
-    <p><%= inv_year %></p>
-    <label>Price:</label>
-    <p><%= inv_price %></p>
+  <h1>Delete <%= inv_make %> <%= inv_model %></h1>
+  <% if (messages.error) { %>
+  <ul class="error">
+    <% messages.error.forEach(err => { %>
+    <li><%= err %></li>
+    <% }); %>
+  </ul>
+  <% } %>
+  <p>Are you sure you want to delete this item?</p>
+  <form action="/inv/delete/" method="POST">
     <input type="hidden" name="inv_id" value="<%= inv_id %>" />
-    <button type="submit">Delete Vehicle</button>
+    <button type="submit">Yes, Delete</button>
+    <a href="/inv/">No, Cancel</a>
   </form>
 </main>
+
 <%- include('../partials/footer') %>
