--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,23 +1,21 @@
 <%- include('../partials/head') %> <%- include('../partials/header') %> <%-
 include('../partials/navigation') %>
-
 <main>
-  <h1>Inventory Management</h1>
-
-  <% if (messages.success) { %>
-  <p class="success"><%= messages.success %></p>
-  <% } %> <% if (messages.error) { %>
-  <ul class="error">
-    <% messages.error.forEach(err => { %>
-    <li><%= err %></li>
-    <% }); %>
-  </ul>
+  <h1>Account Management</h1>
+  <%- include('../partials/messages') %> <% if (locals.account) { %>
+  <h2>Welcome <%= account.account_firstname %></h2>
+  <% if (account.account_type === 'Employee' || account.account_type ===
+  'Admin') { %>
+  <h3>Inventory Management</h3>
+  <p><a href="/inv/" title="Manage Inventory">Manage Inventory</a></p>
   <% } %>
-
-  <ul>
-    <li><a href="/inv/add-classification">Add New Classification</a></li>
-    <li><a href="/inv/add-inventory">Add New Inventory Item</a></li>
-  </ul>
+  <p>
+    <a href="/account/update/<%= account.account_id %>" title="Update Account"
+      >Update Account Information</a
+    >
+  </p>
+  <% } else { %>
+  <p>Please <a href="/account/login">login</a> to manage your account.</p>
+  <% } %>
 </main>
-
 <%- include('../partials/footer') %>
