--- a/views/inventory/search.ejs
+++ b/views/inventory/search.ejs
@@ -1,21 +1,53 @@
 <%- include('../partials/head') %> <%- include('../partials/header') %> <%-
 include('../partials/navigation') %>
-
 <main>
   <h1>Search Results</h1>
+  <%- include('../partials/messages') %>
   <form action="/inv/search" method="GET">
-    <input type="text" name="search_term" placeholder="Search..." />
+    <label for="search_term"
+      >Search Inventory:
+      <input
+        type="text"
+        name="search_term"
+        id="search_term"
+        value="<%= locals.search_term || '' %>"
+      />
+    </label>
     <button type="submit">Search</button>
   </form>
-  <% if (searchResults && searchResults.rows.length > 0) { %>
-  <ul>
-    <% searchResults.rows.forEach(item => { %>
-    <li><%= item.inv_make %> <%= item.inv_model %></li>
+  <% if (searchResults && searchResults.length > 0) { %>
+  <ul id="inv-display">
+    <% searchResults.forEach(vehicle => { %>
+    <li class="vehicle-card">
+      <a
+        href="/inv/detail/<%= vehicle.inv_id %>"
+        title="View <%= vehicle.inv_make %> <%= vehicle.inv_model %> details"
+      >
+        <img
+          src="<%= vehicle.inv_thumbnail %>"
+          alt="Image of <%= vehicle.inv_make %> <%= vehicle.inv_model %> on CSE Motors"
+        />
+      </a>
+      <div class="namePrice">
+        <hr />
+        <h2>
+          <a
+            href="/inv/detail/<%= vehicle.inv_id %>"
+            title="View <%= vehicle.inv_make %> <%= vehicle.inv_model %> details"
+          >
+            <%= vehicle.inv_make %> <%= vehicle.inv_model %>
+          </a>
+        </h2>
+        <span
+          >$<%= new Intl.NumberFormat('en-US').format(vehicle.inv_price)
+          %></span
+        >
+      </div>
+    </li>
     <% }); %>
   </ul>
   <% } else { %>
-  <p>No results found.</p>
+  <p class="notice">No matching vehicles found.</p>
   <% } %>
 </main>
-
 <%- include('../partials/footer') %>
