--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,25 @@
-<header id="top-header">
-  <div class="siteName">
-    <a href="/" title="Return to Home page">CSE Motors</a>
-  </div>
-  <div id="tools">
-    <a href="/account/login" title="Go to your account">My Account</a>
-  </div>
+<header>
+  <h1>CSE Motors</h1>
+  <nav>
+    <ul>
+      <% if (locals.account && (locals.account.account_type === 'Employee' ||
+      locals.account.account_type === 'Admin')) { %>
+      <li>
+        <a href="/account/" title="Account Management"
+          >Welcome <%= account.account_firstname %></a
+        >
+      </li>
+      <li><a href="/account/logout" title="Logout">Logout</a></li>
+      <% } else if (locals.account) { %>
+      <li>
+        <a href="/account/" title="Account Management"
+          >Welcome <%= account.account_firstname %></a
+        >
+      </li>
+      <li><a href="/account/logout" title="Logout">Logout</a></li>
+      <% } else { %>
+      <li><a href="/account/login" title="Login">My Account</a></li>
+      <% } %>
+    </ul>
+  </nav>
 </header>
